# rules_thirdparty

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/: renovate.json
.github/workflows/: bazel.yaml
