module(
    name = "rules_thirdparty",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name="dnsmasq",
    build_file = "//thirdparty/dnsmasq:BUILD.dnsmasq.bazel",
    #integrity = "sha256-9iJoKEizNnetsratCCZGGKKuCgHaSGqT/YzZEYaz0VM=",
    sha256 = "f622682848b33677adb2b6ad08264618a2ae0a01da486a93fd8cd91186b3d153",
    strip_prefix = "dnsmasq-2.91",
    urls = [
        "https://thekelleys.org.uk/dnsmasq/dnsmasq-2.91.tar.xz",
    ],
)

